Rename some static files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-#contato .coluna2 .coluna, #apresentação .coluna1 .coluna {
+#contato .coluna2 .coluna,
+#apresentação .coluna1 .coluna {
   display: inline-block;
   width: 49%;
   align-items: center;
@@ -8,19 +9,22 @@
   margin-left: 20px;
 }
 
-#contato .coluna2, #apresentação .coluna1 {
+#contato .coluna2,
+#apresentação .coluna1 {
   display: flex;
   align-items: flex-start;
   margin-top: 98px;
 }
 
-#contato .coluna2 .coluna h2, #apresentação .coluna1 .coluna h1 {
+#contato .coluna2 .coluna h2,
+#apresentação .coluna1 .coluna h1 {
   font-family: "Black Han Sans", sans-serif;
   font-weight: bold;
   font-size: 2em;
 }
 
-#contato .coluna2 .coluna form .grupo-input input, #contato .coluna2 .coluna form .grupo-input textarea {
+#contato .coluna2 .coluna form .grupo-input input,
+#contato .coluna2 .coluna form .grupo-input textarea {
   border-radius: 4px;
   border: 0.5px solid grey;
   opacity: 0.5;
@@ -39,9 +43,11 @@ body {
   width: 168px;
   margin: auto;
 }
+
 #apresentação .coluna1 .coluna #img-coluna {
   width: 100%;
 }
+
 #apresentação .coluna1 .coluna p {
   line-height: 33px;
 }
@@ -49,36 +55,45 @@ body {
 #contato .coluna2 .coluna ul {
   padding-left: 0px;
 }
+
 #contato .coluna2 .coluna ul li {
   list-style: none;
 }
+
 #contato .coluna2 .coluna ul li strong {
   margin-right: 10px;
 }
+
 #contato .coluna2 .coluna form .grupo-input {
   display: flex;
   flex-direction: column;
   padding-top: 20px;
 }
+
 #contato .coluna2 .coluna form .grupo-input textarea {
   resize: none;
   height: 156px;
 }
+
 #contato .coluna2 .coluna form .grupo-input textarea:focus {
   border-color: purple;
   outline-style: none;
 }
+
 #contato .coluna2 .coluna form .grupo-input label {
   font-weight: bold;
 }
+
 #contato .coluna2 .coluna form .grupo-input input {
   height: 35px;
   padding: 0;
 }
+
 #contato .coluna2 .coluna form .grupo-input input:focus {
   border-color: purple;
   outline-style: none;
 }
+
 #contato .coluna2 .coluna form input[type=submit] {
   margin-top: 15px;
   border-radius: 4px;
@@ -87,6 +102,7 @@ body {
   font-weight: bold;
   font-size: 16px;
 }
+
 #contato .coluna2 .coluna form input[type=submit]:hover {
   background-color: #b895cf;
 }
